# minskpp

./: CMakeLists.txt  README.md
source/mc/: program.cpp
